@@ -1,3 +1,6 @@
+2011-08-09
+ Added checks for array/scalar mixup.
+
 2011-04-19
  Further processing to diagnose missing brace.
 
